# cadence

./: .env.example  .gitignore  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  pr-dmg.yml  release.yml
docs/: IDEAS.md  PITCH.md  RELEASE.md  SETUP.md
scripts/: check-version.mjs  set-version.mjs
src/: App.tsx  styles.css  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  cache.rs  calendar.rs  config.rs  gmail.rs  google.rs  lib.rs  main.rs  openai.rs  tasks.rs
src/components/: AvailabilityPanel.tsx  Calendar.tsx  Capture.tsx  CommandPalette.tsx  DragChip.tsx  ErrorBoundary.tsx  EventDetails.tsx  FocusView.tsx  GoToDate.tsx  Hoverable.tsx  Icon.tsx  MainApp.tsx  Onboarding.tsx  Search.tsx  Settings.tsx  Shortcuts.tsx  Sidebar.tsx  TaskEditor.tsx  TaskRail.tsx  Titlebar.tsx  Toast.tsx  Triage.tsx  overlay.ts
src/data/: seed.ts
src/lib/: api.ts  dates.test.ts  dates.ts  format.test.ts  format.ts  meeting.ts  pack.test.ts  pack.ts  parse.test.ts  parse.ts  railDrop.test.ts  railDrop.ts  slots.ts  sound.ts  taskLists.ts  updates.ts
src/store/: app.ts  pointer.ts  selectors.test.ts  selectors.ts  usePointerHandlers.ts
