[package]
name = "cadence"
version = "0.1.0"
description = "Cadence — calendar and tasks, in one calm place"
authors = ["Cadence"]
edition = "2021"

[lib]
name = "cadence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
