[package]
name = "cadence"
version = "0.1.0"
description = "Cadence — calendar and tasks, in one calm place"
authors = ["Cadence"]
edition = "2021"

[lib]
name = "cadence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenvy = "0.15"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = "2"
open = "5"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
